# sift

./: .env.template  .gitignore  README.md  main.py  profile.txt  pyproject.toml  seen.json
.github/workflows/: ci.yml
core/: data.py  dispatch.py  utils.py  weigh.py
sources/: base.py  ini_rw.py
